package com.group_three.food_ordering.enums;

public enum DiningTableStatus {

    AVAILABLE,
    IN_SESSION,
    COMPLETE,
    WAITING_RESET,
    OUT_OF_SERVICE,
}
