package com.group_three.food_ordering.enums;

public enum PaymentStatus {
    PENDING,
    COMPLETED,
    CANCELLED
}
