package com.group_three.food_ordering.enums;

public enum RoleType {

    ROLE_GUEST,
    ROLE_CLIENT,
    ROLE_STAFF,
    ROLE_MANAGER,
    ROLE_ADMIN,
    ROLE_ROOT
}
